Added to about me

--- a/about.html
+++ b/about.html
@@ -305,7 +305,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>Why I am awesome.</p>
+<ul>
+<li><strong>Name:</strong> Sam Fuller</li>
+<li><strong>Ocupation:</strong> PhD Candidate in Political Science, University of Calfornia, Davis</li>
+<li><strong>Hobbies:</strong> Hiking and watching garbage movies.</li>
+</ul>
+<p><img src="images/berryessa.jpg" /></p>
 
 
 
