--- a/code.html
+++ b/code.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8</title>
+<title>Coding</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -304,20 +304,12 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Coding</h1>
 
 </div>
 
 
-<p><br /></p>
-<div class="pull-left">
-<p><img width = "300" src="images/me.jpg" style = "padding-right: 25px"></p>
-</div>
-<div id="sam-fuller" class="section level1">
-<h1>Sam Fuller</h1>
-<p>I’m a PhD Candidate in political science at the University of <a href="http://ps.ucdavis.edu/">California, Davis</a>.</p>
-<p>My research focuses on better understanding public opinion and political behavior, with a focus on ideological and affective polarization, using advanced methods like dimensional analysis and machine learning methods.</p>
-<p>I received a B.S. in both political science and economics from <a href="https://berry.edu">Berry College</a>.</p>
-</div>
+
 
 
 
