--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8</title>
+<title>Research</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -304,19 +304,35 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Research</h1>
 
 </div>
 
 
-<p><br /></p>
-<div class="pull-left">
-<p><img width = "300" src="images/me.jpg" style = "padding-right: 25px"></p>
+<div id="publications" class="section level2">
+<h2>Publications</h2>
+<ul>
+<li><p><a href="https://www.cambridge.org/core/journals/politics-and-gender/article/conditional-effect-of-scientific-knowledge-and-gender-on-support-for-covid19-government-containment-policies-in-a-partisan-america/C4AEB27D4046433749A883941AC74809">The Conditional Effects of Scientific Knowledge &amp; Gender on Support for COVID-19 Government Containment Policies in a Partisan America</a></p></li>
+<li><p><a href="https://onlinelibrary.wiley.com/doi/full/10.1111/ssqu.12894?casa_token=6e7Z-ZCUfysAAAAA%3A7yZfCaBB6TX6sbWXZlMGrZmmcDZlneO3w7sWqCka2PjzZCXBlOI7ghtgfxdz9DOPDZVwhv7wRajHJfi4">The Interactive Effects of Scientific Knowledge and Gender on COVID‐19 Social Distancing Compliance</a></p></li>
+</ul>
 </div>
-<div id="sam-fuller" class="section level1">
-<h1>Sam Fuller</h1>
-<p>I’m a PhD Candidate in political science at the University of <a href="http://ps.ucdavis.edu/">California, Davis</a>.</p>
-<p>My research focuses on better understanding public opinion and political behavior, with a focus on ideological and affective polarization, using advanced methods like dimensional analysis and machine learning methods.</p>
-<p>I received a B.S. in both political science and economics from <a href="https://berry.edu">Berry College</a>.</p>
+<div id="working-papers" class="section level2">
+<h2>Working Papers</h2>
+<ul>
+<li><p>See It in 3D: The Underlying Dimensions of Affective Polarization</p></li>
+<li><p><a href="https://www.researchgate.net/publication/343736604_Towards_a_General_Methodology_of_Bridging_Ideological_Spaces">Towards a General Methodology of Bridging Ideological Spaces</a></p></li>
+</ul>
+</div>
+<div id="links-to-scholarly-pages" class="section level2">
+<h2>Links to Scholarly Pages</h2>
+<ul>
+<li><p><a href="https://scholar.google.com/citations?user=EAwVTAYAAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a></p></li>
+<li><p><a href="https://www.researchgate.net/profile/Sam_Fuller7">Research Gate</a></p></li>
+<li><p>ORCID</p>
+<div itemscope="" itemtype="https://schema.org/Person">
+<a itemprop="sameAs" content="https://orcid.org/0000-0002-9670-1092" href="https://orcid.org/0000-0002-9670-1092" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-left:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0002-9670-1092</a>
+</div></li>
+</ul>
 </div>
 
 
